--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "require": {
         "php": "^7.4 | ^8.0",
         "illuminate/support": "^6.0|^7.0|^8.0",
-        "simplehtmldom/simplehtmldom": "dev-master"
+        "simplehtmldom/simplehtmldom": "^2.0"
     },
     "homepage": "https://github.com/sontungx305/laravel-simple-html-dom",
     "license": "MIT",
